# modern-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: CPM.cmake  ProjectStandard.cmake  StandardSettings.cmake
test/: CMakeLists.txt
test/src/: tmp_test.cpp
